--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,7 +11,13 @@
 
 body {
     display: block;
+    background-image: url(/Assets/images/assemblyfloor.png);
+background-repeat: no-repeat;
+background-size: cover;
+}
 
+a {
+    color:var(--links);
 }
 
 header {
@@ -26,6 +32,8 @@ header h1 {
     color: var(--links);
     padding-left: 15px;
     display: inline-block;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: underline;
 }
 
 header nav {
@@ -47,13 +55,27 @@ header nav ul li {
     padding-top: 14px;
 }
 
+aside {
+    width: 25%;
+    height: 78%;
+    padding: 15px;
+    margin-left: 15px;
+    margin-top: 45px;
+    position: absolute;
+    right: 0;
+    font-style: italic;
+    border: darkred 2px dashed;
+    margin-right: 25px;
+  }
+
 footer {
-    padding: 10px;
+    padding: 15px;
     background-color: var(--banner);
     width: 100%;
-    display: inline-block;
+    display: block;
     position: absolute;
     bottom: 0;
+    /* left: 0; */
 }
 
 footer h2 {
@@ -61,4 +83,43 @@ footer h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: right;
     color: var(--links);
+    bottom: 0;
+}
+
+/* footer h3 {
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: left;
+    color: var(--links);
+    top: 0;
+} */
+
+#footleft {
+    position: fixed;
+    left: 0;
+    padding-bottom: 5px;
+    bottom: 0;
+}
+
+#footright {
+    position: fixed;
+    right: 0;
+    padding-bottom: 5px;
+    bottom: 0;
+}
+
+.card {
+    height: 300px;
+    width: 500px;
+    border: darkred 2px dashed;
+    margin: 65px 25px; 
+    display: flex;
+    flex-direction: row;
+    vertical-align: top;
+    float: left;
+}
+
+a:hover {
+    color: gray;
+    cursor: grab;
 }
