--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -25,6 +25,7 @@ header {
     background-color: var(--banner);
     width: 100%;
     display: block;
+    position: fixed;
 }
 
 header h1 {
@@ -32,7 +33,7 @@ header h1 {
     color: var(--links);
     padding-left: 15px;
     display: inline-block;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Times New Roman';
     text-decoration: underline;
 }
 
@@ -55,25 +56,45 @@ header nav ul li {
     padding-top: 14px;
 }
 
+main {
+   margin-top: 100px;
+    display: inline-block;
+    position: absolute;
+    justify-content: flex-start;
+}
+
 aside {
     width: 25%;
     height: 78%;
     padding: 15px;
     margin-left: 15px;
-    margin-top: 45px;
-    position: absolute;
+    margin-top: 145px;
+    position: fixed;
     right: 0;
-    font-style: italic;
     border: darkred 2px dashed;
     margin-right: 25px;
+    display: inline-block;
+    background: repeating-linear-gradient(
+  45deg,
+  rgba(139, 0 ,0, .1),
+  rgba(139, 0 ,0, .1)10px,
+  rgba(245, 245, 245, .1) 10px,
+  rgba(245, 245, 245, .1) 20px
+);
   }
+
+aside h1{
+    font-size: 36px;
+    color: whitesmoke;
+    text-shadow: 3px black 1 ;
+}
 
 footer {
     padding: 15px;
     background-color: var(--banner);
     width: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     /* left: 0; */
 }
@@ -85,14 +106,6 @@ footer h2 {
     color: var(--links);
     bottom: 0;
 }
-
-/* footer h3 {
-    font-size: 16px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: left;
-    color: var(--links);
-    top: 0;
-} */
 
 #footleft {
     position: fixed;
@@ -108,15 +121,38 @@ footer h2 {
     bottom: 0;
 }
 
-.card {
+.card1 {
     height: 300px;
-    width: 500px;
+    width: 900px;
     border: darkred 2px dashed;
-    margin: 65px 25px; 
+    margin: 40px 25px 45px 25px; 
     display: flex;
     flex-direction: row;
     vertical-align: top;
     float: left;
+    position: relative;
+}
+
+.card2 {
+    height: 300px;
+    width: 900px;
+    border: darkred 2px dashed;
+    margin: 25px 25px 45px 25px; 
+    display: flex;
+    flex-direction: row;
+    vertical-align: top;
+    float: left;
+    position: relative;
+}
+
+.crest {
+    position: absolute;
+    bottom: 0;
+    margin-left: 120px;
+    border-top: 2px darkred dashed;
+    border-left: 2px darkred dashed;
+    border-right: 2px darkred dashed;
+    padding: 15px;
 }
 
 a:hover {
