--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -65,8 +65,8 @@ main {
 }
 
 aside {
-    width: 25%;
-    height: 78%;
+    width: 25vh;
+    height: 80vh;
     padding: 15px;
     margin-left: 15px;
     margin-top: 145px;
@@ -123,8 +123,8 @@ footer h2 {
 }
 
 .card1 {
-    height: 300px;
-    width: 900px;
+    height: 45vh;
+    width: 65vh;
     border: darkred 2px dashed;
     margin: 40px 25px 45px 25px; 
     display: flex;
@@ -142,9 +142,9 @@ footer h2 {
 z-index: 0;
 }
 
-.card2 {
-    height: 300px;
-    width: 900px;
+/* .card2 {
+    height: 45vh;
+    width: 65vh;
     border: darkred 2px dashed;
     margin: 25px 25px 45px 25px; 
     display: flex;
@@ -159,7 +159,7 @@ z-index: 0;
   rgba(245, 245, 245, .1) 10px,
   rgba(245, 245, 245, .1) 20px
 );
-}
+} */
 
 .crest {
     position: absolute;
