--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
+    padding: 0;
 }
 
 body {
@@ -22,9 +23,7 @@ a:visited {
     color: darkred;
 }
 
-header a {
-    color: var(--links);
-}
+/* HEADER BEGINS HERE */
 
 .container {
     width: 100%;
@@ -47,6 +46,10 @@ header a {
     width: 125px;
     height: auto;
     padding-left: 50px;
+}
+
+header a {
+    color: var(--links);
 }
 
 header h1 {
@@ -78,7 +81,6 @@ nav ul li {
     background-size: stretch;
     background-position: -100px;
     background-repeat: no-repeat;
-    box-sizing: border-box;
 
 }
 
@@ -88,8 +90,10 @@ hr {
     border: none;
     margin: 25px 0 5px;
 }
+
+/* BEGIN ABOUTME SECTION */
+
 .aboutMe {
-    /* box-sizing: border-box; */
     margin-top: 10px;
     width: 80%;
     height: 400px;
@@ -98,7 +102,6 @@ hr {
 }
 
 .aboutMe.sidenav {
-    /* box-sizing: border-box; */
     width: 15%;
     height: 380px;
     margin: 10px 25px 15px 0;
@@ -115,7 +118,6 @@ hr {
     color: #001241;
     text-shadow: white 1px 1px;
     font-size: 40px;
-    /* box-sizing: border-box; */
     height: 350px;
     width: 100%;
     border: darkred 2px solid;
@@ -125,8 +127,9 @@ hr {
     z-index: 0;
 }
 
+/* END ABOUT ME SECTION */
+
 .projects {
-    box-sizing: border-box;
     margin-top: 10px;
     width: 80%;
     display: flex;
@@ -134,7 +137,6 @@ hr {
 }
 
 .projects.sidenav {
-    box-sizing: border-box;
     width: 15%;
     height: 1360px;
     margin: 10px 25px 15px 0;
@@ -156,7 +158,6 @@ color: whitesmoke;
     color: #001241;
     text-shadow: white 1px 1px;
     font-size: 40px;
-    box-sizing: border-box;
     height: 450px;
     width: 100%;
     border: darkred 2px solid;
@@ -169,7 +170,6 @@ color: whitesmoke;
 }
 
 .card2 {
-    box-sizing: border-box;
     height: 400px;
     width: 40%;
     min-width: 200px;
@@ -182,13 +182,9 @@ color: whitesmoke;
 }
 
 footer {
-    box-sizing: border-box;
     padding: 5px;
     background-color: var(--banner);
     width: 100%;
-    /* display: flex;
-    position: fixed;
-    bottom: 0; */
 }
 
 footer h2 {
