--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -6,7 +6,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 0;
 }
 
@@ -15,9 +15,7 @@ body {
 }
 
 a:hover {
-    color: gray;
     cursor: grab;
-    opacity: 0;
 }
 
 a:visited {
@@ -43,7 +41,7 @@ a:visited {
     align-items: center;
 }
 
-.crest {
+.bitmoji {
     width: 100px;
     height: auto;
 }
@@ -99,6 +97,8 @@ hr {
     height: 400px;
     display: flex;
     flex-wrap: wrap;
+    overflow: none;
+    flex: 1 2;
 }
 
 .aboutMe.sidenav {
@@ -113,13 +113,9 @@ hr {
     padding-left: 10px;
 }
 
-.bitMoji {
-    opacity: .8;
-}
-
 .aboutMe.card1 {
-    color: #001241;
-    text-shadow: white 1px 1px;
+    color: black;
+    text-shadow: whitesmoke 1px 1px;
     font-size: 40px;
     height: 350px;
     width: 100%;
@@ -128,12 +124,40 @@ hr {
     margin: 10px 0 10px 10px;
     display: flex;
     z-index: 0;
+    background-color: #001241;
+    opacity: .8;
+    flex: 1 2;
+}
+
+.aboutMe h1 {
+    background-color: rgb(229, 241, 253);
+    padding: 20px;
+    font-size: 18px;
+    width: 60%;
+    margin: 60px 25px;
+    border: darkred 1px solid;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 2em;
+    flex: 1 2;
+}
+
+.aboutMe img {
+    height: 300px;
+    width: auto;
+    margin: 46px 0 0 70px;
+    flex: 0 1;
+}
+
+.aboutMe.card1:hover {
+    opacity: 1;
+    box-shadow: 3px 3px 3px #191b22;
 }
 
 /* END ABOUT ME SECTION */
 
-
 /* BEGIN PROJECTS SECTION */
+
 .projects {
     margin-top: 10px;
     width: 83%;
@@ -142,20 +166,9 @@ hr {
     justify-content: center;
 }
 
-.projects h2 {
-    background-color: darkred;
-    margin-bottom: 400px;
-    width: 83%;
-    padding: 5px;
-    border: darkred 2px solid;
-    border-radius: 0 0 5px 5px;
-    text-align: center;
-}
-
 .projects.sidenav {
     width: 15%;
     height: 1300px;
-    /* margin: 10px 25px 15px 0; */
     display: flex;
     justify-content: flex-start;
     vertical-align: top;
@@ -165,33 +178,45 @@ hr {
     padding-left: 10px;
 }
 
- .sidenav h3 {
-font-size: 24px;
-color: whitesmoke;
- }
+.sidenav h2 {
+    font-size: 55px;
+    color:#001241;
+}
 
 .projects.card1 {
-    color: #001241;
-    text-shadow: white 1px 1px;
+    color: whitesmoke;
+    text-shadow: #001241 3px 3px 3px;
     font-size: 40px;
     height: 450px;
     width: 85%;
     border: darkred 2px solid;
     border-radius: 5px;
-    /* margin: 10px 110px 10px; */
     display: flex;
-   background-image: url(/Assets/images/digital-marketing-meeting.jpg);
-   background-size: cover;
-   opacity: .8;
+    background-image: url(/Assets/images/digital-marketing-meeting.jpg);
+    background-size: cover;
+    opacity: .8;
     z-index: 0;
-    
+}
+
+.projects h1 {
+    background-color: darkred;
+    margin-bottom: 400px;
+    width: 83%;
+    padding: 5px;
+    border: darkred 2px solid;
+    border-radius: 0 0 5px 5px;
+    text-align: center;
 }
 
 .projects.card1:hover {
     opacity: 1;
     box-shadow: 3px 3px 3px #191b22;
 }
+
 .card2 {
+    color: whitesmoke;
+    text-shadow: #001241 3px 3px 3px;
+    font-size: 20px;
     height: 400px;
     width: 45%;
     min-width: 400px;
@@ -200,10 +225,170 @@ color: whitesmoke;
     margin: 10px;
     display: flex;
     flex-direction: column;
-    /* vertical-align: top; */
-    background-color: #001241;
+    background-image: url(/Assets/images/portfolio-screenshot.png);
+    background-size: cover;
+    opacity: .8;
 }
 
+.card2 h1 {
+    background-color: rgb(117, 0, 0);
+    margin-bottom: 400px;
+    width: 83%;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin: 0px 50px 350px;
+}
+
+.card3 {
+    color: whitesmoke;
+    text-shadow: #001241 3px 3px 3px;
+    font-size: 20px;
+    height: 400px;
+    width: 45%;
+    min-width: 400px;
+    border: darkred 2px solid;
+    border-radius: 5px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    background-image: url(/Assets/images/rhcp.jpg);
+    background-size: cover;
+    opacity: .8;
+}
+
+.card3 h1 {
+    background-color: rgb(117, 0, 0);
+    margin-bottom: 400px;
+    width: 83%;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin: 0px 50px 350px;
+}
+
+.card4 {
+    color: whitesmoke;
+    text-shadow: #001241 3px 3px 3px;
+    font-size: 20px;
+    height: 400px;
+    width: 45%;
+    min-width: 400px;
+    border: darkred 2px solid;
+    border-radius: 5px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    background-image: url(/Assets/images/st-andrews.jpg);
+    background-size: cover;
+    opacity: .8;
+}
+
+.card4 h1 {
+    background-color: rgb(117, 0, 0);
+    margin-bottom: 400px;
+    width: 83%;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin: 0px 50px 350px;
+}
+
+.card5 {
+    color: whitesmoke;
+    text-shadow: #001241 3px 3px 3px;
+    font-size: 20px;
+    height: 400px;
+    width: 45%;
+    min-width: 400px;
+    border: darkred 2px solid;
+    border-radius: 5px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    background-image: url(/Assets/images/survivor.jpg);
+    background-size: cover;
+    opacity: .8;
+}
+
+.card5 h1 {
+    background-color: rgb(117, 0, 0);
+    margin-bottom: 400px;
+    width: 83%;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin: 0px 50px 350px;
+}
+
+.projects.card2:hover {
+    opacity: 1;
+    box-shadow: 3px 3px 3px #191b22;
+}
+
+.projects.card3:hover {
+    opacity: 1;
+    box-shadow: 3px 3px 3px #191b22;
+}
+
+.projects.card4:hover {
+    opacity: 1;
+    box-shadow: 3px 3px 3px #191b22;
+}
+
+.projects.card5:hover {
+    opacity: 1;
+    box-shadow: 3px 3px 3px #191b22;
+}
+
+/* END PROJECTS SECTION */
+
+/* BEGIN CONTACT SECTION */
+
+.contact {
+    margin-top: 10px;
+    width: 83%;
+    height: 180px;
+    display: flex;
+}
+
+.contact.card {
+    color: black;
+    text-shadow: whitesmoke 1px 1px;
+    font-size: 40px;
+    height: 120px;
+    width: 100%;
+    /* border: darkred 2px solid; */
+    border-radius: 5px;
+    margin: 10px 0 10px 10px;
+    display: flex;
+    z-index: 0;
+    /* background-color: #001241; */
+    opacity: .8;
+}
+
+.contact ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+
+.contact ul li{
+    margin: 45px;
+}
+
+.contact.sidenav {
+    width: 15%;
+    height: 170px;
+    display: flex;
+    justify-content: flex-start;
+    vertical-align: top;
+    position: absolute;
+    right: 0;
+    border-left: 2px darkred solid;
+    padding-left: 10px;
+}
+/* END CONTACT SECTION */
+
+/* BEGIN FOOTER */
 footer {
     padding: 5px;
     background-color: var(--banner);
