--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -31,7 +31,7 @@ a:visited {
     padding-right: 2%;
     box-sizing: border-box;
     overflow: hidden;
-    background-color: #001241;
+    background-image: linear-gradient(#001241, #323d63);
 }
 
 
@@ -97,13 +97,13 @@ hr {
     height: 400px;
     display: flex;
     flex-wrap: wrap;
-    overflow: none;
+    overflow: hidden;
     flex: 1 2;
 }
 
 .aboutMe.sidenav {
     width: 15%;
-    height: 380px;
+    height: 400px;
     display: flex;
     justify-content: flex-start;
     vertical-align: top;
@@ -124,7 +124,7 @@ hr {
     margin: 10px 0 10px 10px;
     display: flex;
     z-index: 0;
-    background-color: #001241;
+    background-image: linear-gradient(#001241, #323d63);
     opacity: .8;
     flex: 1 2;
 }
@@ -375,6 +375,14 @@ hr {
     margin: 45px;
 }
 
+.contact a{
+    color: #001241;
+}
+
+.contact a:hover{
+    opacity: .8;
+    text-shadow: black 1px 1px 1px;
+}
 .contact.sidenav {
     width: 15%;
     height: 170px;
